stop course cards from overflowing - set min-width

--- a/public/math-qs.css
+++ b/public/math-qs.css
@@ -30,6 +30,7 @@ body {
     display:block;
     width: 40vw;
     margin: 1vw;
+    min-width: 200px;
     flex: 0 0 auto;
     border: 2px solid darkcyan;
     box-shadow: 1px 2px 2px darkgray;
